[FIX] html_builder: allow dropdown labels to truncate
This commit allows dropdown labels to truncate within the `html_builder`
environment. Prior to this commit, an `auto` value was assigned to the
`flex-basis` property meaning it would take as much space as its content,
meaning that if the label is very long, siblings wouldn't have enough
space to grow.

With this commit, we remove this `flex-basis` value an rely on the
other `flex` values already defined, as well as the `min-width`.

task-4910410

X-original-commit: 2cf1b8caaa6e828fb8eb25175c40897d6153f7f6

--- a/addons/html_builder/static/src/core/building_blocks/builder_select.scss
+++ b/addons/html_builder/static/src/core/building_blocks/builder_select.scss
@@ -12,7 +12,7 @@
 }
 
 .o-hb-select-wrapper {
-    flex: 1 0 auto;
+    flex: 1 0 0;
     min-width: 7ch; // Approx 4 characters + caret
     max-width: 100%;
     display: flex;
